--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs"]
 	path = docs
-	url = git@github.com:usp654/usp654.github.io.git
+	url = git@github.com:urbanstudy/stat564.github.io.git
