--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,12 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   name = "Policies"
   pre = "<i class=\"material-icons\">gavel</i>"
   url = "/policies"
+[[menu.main]]
+  weight = 5
+  identifier = "notes"
+  name = "Notes"
+  pre = "<i class=\"material-icons\">gavel</i>"
+  url = "/notes"
 
 [[menu.footer]]
   weight = 1
