fix the table and renew the tools page

--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[menu.main]]
   weight = 3
   identifier = "tools"
-  name = "Tools and Datasets"
+  name = "Tools and Resources"
   pre = "<i class=\"material-icons\">build</i>"
   url = "/tools"
 [[menu.main]]
