--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,5 +1,6 @@
 lessons:
   - title: "Part 1: Introduction & Data Analysis Workflow"
+    lab: "lab00.html"
   - title: "Introduction and Data Analysis Workflow"
     date: "09/24"
     reading: "reading01.html"
