--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,6 +1,6 @@
 lessons:
   - title: "Part 1: Introduction & Data Analysis Workflow"
-    reading: "Note 1.html"
+    reading: "Note 1.pdf"
     lab: "lab00.html"
   - title: "Introduction and Data Analysis Workflow"
     date: "09/24"
