--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -5,7 +5,7 @@ lessons:
   - title: "Introduction and Data Analysis Workflow"
     date: "09/24"
     reading: "reading01.html"
-    assignment: ""
+    assignment: "hw00.pdf"
     lecture: "lecture01.html"
     lab: "lab01.html"
   - title: "Part 2: Linear Regression"    
