add config.toml the url="/notes.html

--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   identifier = "notes"
   name = "Notes"
   pre = "<i class=\"material-icons\">gavel</i>"
-  url = "/notes"
+  url = "/notes.html"
 
 [[menu.footer]]
   weight = 1
