--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,78 +1,74 @@
 lessons:
-  - title: "Part 1: Introduction & Data Analysis Workflow"
+  - title: "Review"
     reading: "Note 1.pdf"
     lecture: "lecture00.html"
     lab: "lab00.html"
-  - title: "Introduction and Data Analysis Workflow"
-    date: "09/24"
+  - title: "Week 1"
+    date: "09/24-28"
     reading: "reading01.html"
     assignment: "hw00.pdf"
     lecture: "lecture01.html"
     lab: "lab01.html"
-  - title: "Part 2: Linear Regression"    
-  - title: "Bivariate Regression"
-    date: "10/02"
+  - title: "Week 2"
+    date: "10/01-05"
     assignment: ""
     reading: "reading02.html"
     lecture: "lecture02.html"
     lab: "lab02.html"
-  - title: "DEADLINE: Project proposal"
-    date: "10/09"
-  - title: "Multiple Regression (1)"
-    date: "10/09"
+  - title: "Week 3"
+    date: "10/08-12"
     assignment: "hw01.html"
     reading: "reading03.html"
     lecture: "lecture03.html"
     lab: "lab03.html"
-  - title: "Multiple Regression (2)"
-    date: "10/16"
+  - title: "Week 4"
+    date: "10/15-19"
     assignment: ""
     reading: "reading04.html"
     lecture: "lecture03.html"
     lab: "lab04.html"
-  - title: "Dummy Variables"
-    date: "10/23"
+  - title: "Week 5"
+    date: "10/22-26"
     assignment: "hw02.html"
     reading: "reading05.html"
     lecture: "lecture05.html"
     lab: "lab05.html"
-  - title: "Interactions"
+  - title: "564 Midterm exam"
+    date: "10/29"
+  - title: "561 Midterm exam"
     date: "10/30"
+  - title: "Week 6"
+    date: "10/29-11/02"
     assignment: ""
     reading: "reading06.html"
     lecture: "lecture06.html"
     lab: "lab06.html"
-  - title: "Non-Linear Relationship, Indirect Effects and Omitted Variable Bias"
-    date: "11/06"
+  - title: "Week 7"
+    date: "11/05-09"
     assignment: ""
     reading: "reading07.html"
     lecture: "lecture07.html"
     lab: "lab07.html"
-  - title: "DEADLINE: Project update"
-    date: "11/13"
-  - title: "Outliers, Heteroskedasticity, and Multicollinearity"
-    date: "11/13"
+  - title: "Week 8"
+    date: "11/12-16"
     assignment: "hw03.html"
     reading: "reading08.html"
     lecture: "lecture08.html"
     lab: "lab08.html"
-  - title: "DEADLINE: Assignment 2"
-    date: "11/17"
-  - title: "Part 3: Generalized Linear Models"
-  - title: "Generalized Linear Models I"
-    date: "11/20"
+  - title: "Week 9"
+    date: "11/19-23"
     assignment: ""
     reading: "reading09.html"
     lecture: "lecture09.html"
     lab: "lab09.html"
-  - title: "Generalized Linear Models; Where to go next"
-    date: "11/27"
+  - title: "Week 10"
+    date: "11/26-30"
     assignment: ""
     reading: "reading10.html"
     lecture: "lecture10.html"
     lab: "lab10.html"
-  - title: "DEADLINE: Project Presentation"
+  - title: "564 Final Exam"
+    date: "12/5"
+  - title: "561 Final Exam"
     date: "12/4"
-  - title: "DEADLINE: Project Report"
-    date: "12/8"
     
