arrange the files

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,13 +1,13 @@
 lessons:
   - title: "Review"
-    lectrue564: "Note 1.pdf"
     lecture561: "lecture00.html"
-    assignment564: "assignment56400.html"
+    lectrue564: "reading00.html"
+    assignment564: "lab00.html"
   - title: "Week 1"
     date: "09/24-28"
-    lectrue564: "lecture01.html"
-    assignment561: "hw01.pdf"
     lecture561: "lecture01.html"
+    lectrue564: "reading01.html"
+    assignment561: "hw01.html"
     assignment564: "lab01.html"
   - title: "Week 2"
     date: "10/01-05"
