--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -2,7 +2,6 @@ lessons:
   - title: "Review"
     lecture561: "lecture00.html"
     lectrue564: "reading00.html"
-    assignment564: "lab00.html"
   - title: "Week 1"
     date: "09/24-28"
     lecture561: "lecture01.html"
@@ -11,62 +10,62 @@ lessons:
     assignment564: "lab01.html"
   - title: "Week 2"
     date: "10/01-05"
-    assignment561: ""
-    lectrue564: "lectrue56402.html"
     lecture561: "lecture02.html"
-    assignment564: "assignment56402.html"
+    lectrue564: "reading02.html"
+    assignment561: "hw02.html"
+    assignment564: "lab02.html"
   - title: "Week 3"
     date: "10/08-12"
-    assignment561: "hw01.html"
-    lectrue564: "lectrue56403.html"
     lecture561: "lecture03.html"
-    assignment564: "assignment56403.html"
+    lectrue564: "reading03.html"
+    assignment561: "hw03.html"
+    assignment564: "lab03.html"
   - title: "Week 4"
     date: "10/15-19"
-    assignment561: ""
-    lectrue564: "lectrue56404.html"
-    lecture561: "lecture03.html"
-    assignment564: "assignment56404.html"
+    lecture561: "lecture04.html"
+    lectrue564: "reading04.html"
+    assignment561: "hw04.html"
+    assignment564: "lab04.html"
   - title: "Week 5"
     date: "10/22-26"
-    assignment561: "hw02.html"
-    lectrue564: "lectrue56405.html"
     lecture561: "lecture05.html"
-    assignment564: "assignment56405.html"
+    lectrue564: "reading05.html"
+    assignment561: "hw05.html"
+    assignment564: "lab05.html"
   - title: "564 Midterm exam"
     date: "10/29"
   - title: "561 Midterm exam"
     date: "10/30"
   - title: "Week 6"
     date: "10/29-11/02"
-    assignment561: ""
-    lectrue564: "lectrue56406.html"
     lecture561: "lecture06.html"
-    assignment564: "assignment56406.html"
+    lectrue564: "reading06.html"
+    assignment561: "hw06.html"
+    assignment564: "lab06.html"
   - title: "Week 7"
     date: "11/05-09"
-    assignment561: ""
-    lectrue564: "lectrue56407.html"
     lecture561: "lecture07.html"
-    assignment564: "assignment56407.html"
+    lectrue564: "reading07.html"
+    assignment561: "hw07.html"
+    assignment564: "lab07.html"
   - title: "Week 8"
     date: "11/12-16"
-    assignment561: "hw03.html"
-    lectrue564: "lectrue56408.html"
     lecture561: "lecture08.html"
-    assignment564: "assignment56408.html"
+    lectrue564: "reading08.html"
+    assignment561: "hw08.html"
+    assignment564: "lab08.html"
   - title: "Week 9"
     date: "11/19-23"
-    assignment561: ""
-    lectrue564: "lectrue56409.html"
     lecture561: "lecture09.html"
-    assignment564: "assignment56409.html"
+    lectrue564: "reading09.html"
+    assignment561: "hw09.html"
+    assignment564: "lab09.html"
   - title: "Week 10"
     date: "11/26-30"
-    assignment561: ""
-    lectrue564: "lectrue56410.html"
     lecture561: "lecture10.html"
-    assignment564: "assignment56410.html"
+    lectrue564: "reading10.html"
+    assignment561: "hw10.html"
+    assignment564: "lab10.html"
   - title: "564 Final Exam"
     date: "12/5"
   - title: "561 Final Exam"
