--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -2,6 +2,7 @@ lessons:
   - title: "Review"
     lecture561: "lecture00.html"
     lecture564: "reading00.html"
+    assignment564: "lab00.html"
   - title: "Week 1"
     date: "09/24-28"
     lecture561: "lecture01.html"
