arrange the 561 lecture1-3

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -17,7 +17,7 @@ lessons:
     assignment564: "lab02.html"
   - title: "Week 3"
     date: "10/08-12"
-    #lecture561: "lecture03.html"
+    lecture561: "lecture03.html"
     #lecture564: "reading03.html"
     #assignment561: "hw03.html"
     #assignment564: "lab03.html"
