--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -18,7 +18,7 @@ lessons:
   - title: "Week 3"
     date: "10/08-12"
     lecture561: "lecture03.html"
-    #lecture564: "reading03.html"
+    lecture564: "reading03.html"
     #assignment561: "hw03.html"
     #assignment564: "lab03.html"
   - title: "Week 4"
