--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -19,7 +19,7 @@ lessons:
     date: "10/08-12"
     lecture561: "lecture03.html"
     lecture564: "reading03.html"
-    #assignment561: "hw03.html"
+    assignment561: "hw03.html"
     #assignment564: "lab03.html"
   - title: "Week 4"
     date: "10/15-19"
