--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -23,9 +23,9 @@ lessons:
     #assignment564: "lab03.html"
   - title: "Week 4"
     date: "10/15-19"
-    #lecture561: "lecture04.html"
-    #lecture564: "reading04.html"
-    #assignment561: "hw04.html"
+    lecture561: "lecture04.html"
+    lecture564: "reading04.html"
+    assignment561: "hw04.html"
     #assignment564: "lab04.html"
   - title: "Week 5"
     date: "10/22-26"
