--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -20,7 +20,7 @@ lessons:
     lecture561: "lecture03.html"
     lecture564: "reading03.html"
     assignment561: "hw03.html"
-    #assignment564: "lab03.html"
+    assignment564: "lab03.html"
   - title: "Week 4"
     date: "10/15-19"
     lecture561: "lecture04.html"
