--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -31,7 +31,7 @@ lessons:
     date: "10/22-26"
     #lecture561: "lecture05.html"
     #lecture564: "reading05.html"
-    #assignment561: "hw05.html"
+    assignment561: "hw05.html"
     #assignment564: "lab05.html"
   - title: "564 Midterm exam"
     date: "10/29"
