--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -41,7 +41,7 @@ lessons:
     date: "10/29-11/02"
     #lecture561: "lecture06.html"
     #lecture564: "reading06.html"
-    #assignment561: "hw06.html"
+    assignment561: "hw06.html"
     #assignment564: "lab06.html"
   - title: "Week 7"
     date: "11/05-09"
