--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -26,7 +26,7 @@ lessons:
     lecture561: "lecture04.html"
     lecture564: "reading04.html"
     assignment561: "hw04.html"
-    #assignment564: "lab04.html"
+    assignment564: "lab04.html"
   - title: "Week 5"
     date: "10/22-26"
     #lecture561: "lecture05.html"
