--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -47,7 +47,7 @@ lessons:
     date: "11/05-09"
     #lecture561: "lecture07.html"
     #lecture564: "reading07.html"
-    #assignment561: "hw07.html"
+    assignment561: "hw07.html"
     #assignment564: "lab07.html"
   - title: "Week 8"
     date: "11/12-16"
