--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "STAT 564 Fall 2018"
+title = "STAT"
 theme = "material"
 #disqusShortname = ""
 # googleAnalytics = ""
