564 notes Nov24 2nd

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -5,26 +5,26 @@ lessons:
     assignment564: "lab00.html"
   - title: "Week 1"
     date: "09/24-28"
-    lecture561: "lecture01.html"
-    lecture564: "reading01.html"
+    #lecture561: "lecture01.html"
+    #lecture564: "reading01.html"
     assignment561: "hw01.html"
     assignment564: "lab01.html"
   - title: "Week 2"
     date: "10/01-05"
-    lecture561: "lecture02.html"
-    lecture564: "reading02.html"
+    #lecture561: "lecture02.html"
+    #lecture564: "reading02.html"
     assignment561: "hw02.html"
     assignment564: "lab02.html"
   - title: "Week 3"
     date: "10/08-12"
-    lecture561: "lecture03.html"
-    lecture564: "reading03.html"
+    #lecture561: "lecture03.html"
+    #lecture564: "reading03.html"
     assignment561: "hw03.html"
     assignment564: "lab03.html"
   - title: "Week 4"
     date: "10/15-19"
-    lecture561: "lecture04.html"
-    lecture564: "reading04.html"
+    #lecture561: "lecture04.html"
+    #lecture564: "reading04.html"
     assignment561: "hw04.html"
     assignment564: "lab04.html"
   - title: "Week 5"
