setup final exam

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -69,6 +69,7 @@ lessons:
     # assignment564: "lab10.html"
   - title: "564 Final Exam"
     date: "12/5"
+    assignment564: "fe564.html"
   - title: "561 Final Exam"
     date: "12/4"
-    
+    assignment561: "fe561.html"
