--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,6 +1,7 @@
 lessons:
-  - title: "Review"
+  - title: "Archives"
     lecture561: "lecture00.html"
+    assignment561: "hw00.html"
     lecture564: "reading00.html"
     assignment564: "lab00.html"
   - title: "Week 1"
