--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -9,7 +9,7 @@ lessons:
     #lecture561: "lecture01.html"
     #lecture564: "reading01.html"
     assignment561: "hw01.html"
-    assignment564: "lab01.html"
+    assignment564: "hw564.html"
   - title: "Week 2"
     date: "10/01-05"
     #lecture561: "lecture02.html"
