try syllabus 3rd

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,4 +1,4 @@
-lessons:
+stat561:
   - title: "STAT561"
     date: "Fall 2018"
     note: "note_stat561.html"
@@ -6,7 +6,7 @@ lessons:
     ex: "fe_stat561.html"
     temp: "temp_stat561.html"
     backup: "backup_stat561.html"
-
+stat562:
   - title: "STAT562"
     date: "Winter 2019"
     note: "note_stat562.html"
@@ -14,7 +14,7 @@ lessons:
     ex: "fe_stat562.html"
     temp: "temp_stat562.html"
     backup: "backup_stat562.html"
-    
+stat563:
   - title: "STAT563"
     date: "Spring 2019"
     note: "note_stat563.html"
@@ -22,7 +22,7 @@ lessons:
     ex: "fe_stat563.html"
     temp: "temp_stat563.html"
     backup: "backup_stat563.html"
-    
+stat564:
   - title: "STAT564"
     date: "Fall 2018"
     note: "note_stat564.html"
@@ -30,7 +30,7 @@ lessons:
     ex: "fe_stat564.html"
     temp: "temp_stat564.html"
     backup: "backup_stat564.html"
-    
+stat565:
   - title: "STAT565"
     date: "Winter 2019"
     note: "note_stat565.html"
@@ -38,7 +38,7 @@ lessons:
     ex: "fe_stat565.html"
     temp: "temp_stat565.html"
     backup: "backup_stat565.html"
-    
+stat566:
   - title: "STAT566"
     date: "Spring 2019"
     note: "note_stat566.html"
@@ -46,11 +46,11 @@ lessons:
     ex: "fe_stat566.html"
     temp: "temp_stat566.html"
     backup: "backup_stat566.html"
-    
+stat551:
   - title: "STAT551"
     date: "Fall 2018"
     note: "note_stat551.html"
-
+usp537:
   - title: "USP537"
     date: "Winter 2019"
     note: "note_usp537.html"
