--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,75 +1,75 @@
-lessons:
-  - title: "Date"
-    stat561: "Fall 2018"
-    stat562: "Winter 2019"
-    stat563: "Spring 2019"
-    stat564: "Fall 2018"
-    stat565: "Winter 2019"
-    stat566: "Spring 2019"
-    stat551: ""
-    usp537: "Winter 2019"
 
-  - title: "Notes"
-    stat561: "note_stat561.html"
-    stat562: ""
-    stat563: ""
-    stat564: "note_stat564.html"
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
+stat561:
+  - title: "STAT561"
+    date: "Fall 2018"
+    note: "note_stat561.html"
+    hw: "hw_stat561.html"
+    lab: ""
+    ex: "fe_stat561.html"
+    temp: ""
+    backup: ""
+    
+stat562:
+  - title: "STAT562"
+    date: "Winter 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+    
+stat563:
+  - title: "STAT563"
+    date: "Spring 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+    
+stat564:
+  - title: "STAT564"
+    date: "Fall 2018"
+    note: "note_stat564.html"
+    hw: "hw_stat564.html"
+    lab: ""
+    ex: "fe_stat564.html"
+    temp: ""
+    backup: ""
 
+stat565:
+  - title: "STAT565"
+    date: "Winter 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
 
-  - title: "Assignments"
-    stat561: "hw_stat561.html"
-    stat562: ""
-    stat563: ""
-    stat564: "hw_stat564.html"
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
+stat566:
+  - title: "STAT566"
+    date: "Spring 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
 
+stat551:
+  - title: "STAT551"
+    date: "Fall 2018"
+    note: "note_stat551.html"
 
-  - title: "Labs"
-    stat561: ""
-    stat562: ""
-    stat563: ""
-    stat564: "lab_stat564.html"
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
-
-
-  - title: "Exanimations"
-    stat561: "fe_stat561.html"
-    stat562: ""
-    stat563: ""
-    stat564: "fe_stat564.html"
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
-
-
-  - title: "Temp"
-    stat561: ""
-    stat562: ""
-    stat563: ""
-    stat564: ""
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
-
-
-  - title: "Backup"
-    stat561: ""
-    stat562: ""
-    stat563: ""
-    stat564: ""
-    stat565: ""
-    stat566: ""
-    stat551: ""
-    usp537: ""
+usp537:
+  - title: "USP537"
+    date: "Winter 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
