--- a/data/tmp.yml
+++ b/data/tmp.yml
@@ -1,128 +1,146 @@
-lessons:
-  - title: "Archives"
-    lecture561: "lecture00.html"
-    assignment561: "hw00.html"
-    lecture564: "reading00.html"
-    assignment564: "lab00.html"
-  - title: "Week 1"
-    date: "09/24-28"
-    #lecture561: "lecture01.html"
-    #lecture564: "reading01.html"
-    assignment561: "hw01.html"
-    assignment564: "hw564.html"
-  - title: "Week 2"
-    date: "10/01-05"
-    #lecture561: "lecture02.html"
-    #lecture564: "reading02.html"
-    assignment561: "hw02.html"
-    assignment564: "lab02.html"
-  - title: "Week 3"
-    date: "10/08-12"
-    #lecture561: "lecture03.html"
-    #lecture564: "reading03.html"
-    assignment561: "hw03.html"
-    assignment564: "lab03.html"
-  - title: "Week 4"
-    date: "10/15-19"
-    #lecture561: "lecture04.html"
-    #lecture564: "reading04.html"
-    assignment561: "hw04.html"
-    assignment564: "lab04.html"
-  - title: "Week 5"
-    date: "10/22-26"
-    #lecture561: "lecture05.html"
-    #lecture564: "reading05.html"
-    assignment561: "hw05.html"
-    #assignment564: "lab05.html"
-  - title: "564 Midterm exam"
-    date: "10/29"
-  - title: "561 Midterm exam"
-    date: "10/30"
-  - title: "Week 6"
-    date: "10/29-11/02"
-    #lecture561: "lecture06.html"
-    #lecture564: "reading06.html"
-    assignment561: "hw06.html"
-    #assignment564: "lab06.html"
-  - title: "Week 7"
-    date: "11/05-09"
-    #lecture561: "lecture07.html"
-    #lecture564: "reading07.html"
-    assignment561: "hw07.html"
-    #assignment564: "lab07.html"
-  - title: "Week 8"
-    date: "11/12-16"
-    #lecture561: "lecture08.html"
-    #lecture564: "reading08.html"
-    #assignment561: "hw08.html"
-    #assignment564: "lab08.html"
-  - title: "Week 9"
-    date: "11/19-23"
-    #lecture561: "lecture09.html"
-    #lecture564: "reading09.html"
-    #assignment561: "hw09.html"
-    #assignment564: "lab09.html"
-  - title: "Week 10"
-    date: "11/26-30"
-    # lecture561: "lecture10.html"
-    # lecture564: "reading10.html"
-    # assignment561: "hw10.html"
-    # assignment564: "lab10.html"
-  - title: "564 Final Exam"
-    date: "12/5"
-    assignment564: "fe564.html"
-  - title: "561 Final Exam"
-    date: "12/4"
-    assignment561: "fe561.html"
 
+stat561:
+  - title: "STAT561"
+    date: "Fall 2018"
+    note: "note_stat561.html"
+    hw: "hw_stat561.html"
+    lab: ""
+    ex: "fe_stat561.html"
+    temp: ""
+    backup: ""
+    
+stat562:
   - title: "STAT562"
     date: "Winter 2019"
-    note: "note_stat562.html"
-    hw: "hw_stat562.html"
-    ex: "fe_stat562.html"
-    temp: "temp_stat562.html"
-    backup: "backup_stat562.html"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
     
+stat563:
   - title: "STAT563"
     date: "Spring 2019"
-    note: "note_stat563.html"
-    hw: "hw_stat563.html"
-    ex: "fe_stat563.html"
-    temp: "temp_stat563.html"
-    backup: "backup_stat563.html"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
     
+stat564:
   - title: "STAT564"
     date: "Fall 2018"
     note: "note_stat564.html"
     hw: "hw_stat564.html"
+    lab: ""
     ex: "fe_stat564.html"
-    temp: "temp_stat564.html"
-    backup: "backup_stat564.html"
-    
+    temp: ""
+    backup: ""
+
+stat565:
   - title: "STAT565"
     date: "Winter 2019"
-    note: "note_stat565.html"
-    hw: "hw_stat565.html"
-    ex: "fe_stat565.html"
-    temp: "temp_stat565.html"
-    backup: "backup_stat565.html"
-    
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+
+stat566:
   - title: "STAT566"
     date: "Spring 2019"
-    note: "note_stat566.html"
-    hw: "hw_stat566.html"
-    ex: "fe_stat566.html"
-    temp: "temp_stat566.html"
-    backup: "backup_stat566.html"
-    
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+
+stat551:
   - title: "STAT551"
     date: "Fall 2018"
     note: "note_stat551.html"
 
+usp537:
   - title: "USP537"
     date: "Winter 2019"
-    note: "note_usp537.html"
-    hw: "hw_usp537.html"
-    ex: "fe_usp537.html"
-    temp: "temp_usp537.html"
-    backup: "backup_usp537.html"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+    
+lessons:
+  - title: "Date"
+    stat561: "Fall 2018"
+    stat562: "Winter 2019"
+    stat563: "Spring 2019"
+    stat564: "Fall 2018"
+    stat565: "Winter 2019"
+    stat566: "Spring 2019"
+    stat551: ""
+    usp537: "Winter 2019"
+    
+  - title: "Notes"
+    stat561: "note_stat561.html"
+    stat562: ""
+    stat563: ""
+    stat564: "note_stat564.html"
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
+
+  - title: "Assignments"
+    stat561: "hw_stat561.html"
+    stat562: ""
+    stat563: ""
+    stat564: "hw_stat564.html"
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
+
+  - title: "Labs"
+    stat561: ""
+    stat562: ""
+    stat563: ""
+    stat564: "lab_stat564.html"
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
+
+  - title: "Exanimations"
+    stat561: "fe_stat561.html"
+    stat562: ""
+    stat563: ""
+    stat564: "fe_stat564.html"
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
+
+  - title: "Temp"
+    stat561: ""
+    stat562: ""
+    stat563: ""
+    stat564: ""
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
+
+  - title: "Backup"
+    stat561: ""
+    stat562: ""
+    stat563: ""
+    stat564: ""
+    stat565: ""
+    stat566: ""
+    stat551: ""
+    usp537: ""
