--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -34,7 +34,7 @@ stat564:
     date: "Fall 2018"
     note: "note_stat564.html"
     hw: "hw_stat564.html"
-    lab: ""
+    lab: "lab_stat564.html"
     ex: "fe_stat564.html"
     temp: ""
     backup: ""
