--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -68,7 +68,7 @@ usp537:
   - title: "USP537"
     date: "Winter 2019"
     note: ""
-    hw: ""
+    hw: "hw_usp537.html"
     lab: ""
     ex: ""
     temp: ""
