--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -67,9 +67,9 @@ stat551:
 usp537:
   - title: "USP537"
     date: "Winter 2019"
-    note: ""
+    note: "note_usp537.html"
     hw: "hw_usp537.html"
-    lab: ""
+    lab: "lab_usp537.html"
     ex: ""
-    temp: ""
-    backup: ""
+    temp: "temp_usp537.html"
+    backup: "backup_usp537.html"
