--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -12,8 +12,8 @@ stat561:
 stat562:
   - title: "STAT562"
     date: "Winter 2019"
-    note: ""
-    hw: ""
+    note: "note_stat562.html"
+    hw: "hw_stat562.html"
     lab: ""
     ex: ""
     temp: ""
@@ -42,7 +42,7 @@ stat564:
 stat565:
   - title: "STAT565"
     date: "Winter 2019"
-    note: ""
+    note: "note_stat565.html"
     hw: ""
     lab: ""
     ex: ""
