add stat311 notes

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -63,7 +63,8 @@ stat551:
   - title: "STAT551"
     date: "Fall 2018"
     note: "note_stat551.html"
-
+    hw: "note_stat311.html"
+    
 usp537:
   - title: "USP537"
     date: "Winter 2019"
