--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -43,7 +43,7 @@ stat565:
   - title: "STAT565"
     date: "Winter 2019"
     note: "note_stat565.html"
-    hw: ""
+    hw: "hw_stat565.html"
     lab: ""
     ex: ""
     temp: "temp_stat565.html"
