--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -69,7 +69,7 @@ usp537:
   - title: "USP537"
     date: "Winter 2019"
     note: "note_usp537.html"
-    hw: ""
+    hw: "hw_usp537.html"
     lab: "lab_usp537.html"
     ex: ""
     temp: "temp_usp537.html"
