--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -45,7 +45,7 @@ stat565:
     note: "note_stat565.html"
     hw: "hw_stat565.html"
     lab: ""
-    ex: ""
+    ex: "stat565.pdf"
     temp: "temp_stat565.html"
     backup: ""
 
