--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -15,7 +15,7 @@ stat562:
     note: "note_stat562.html"
     hw: "hw_stat562.html"
     lab: ""
-    ex: ""
+    ex: "stat562.pdf"
     temp: ""
     backup: ""
     
