--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -71,6 +71,6 @@ usp537:
     note: "note_usp537.html"
     hw: "hw_usp537.html"
     lab: "lab_usp537.html"
-    ex: ""
+    ex: "usp537.pdf"
     temp: "temp_usp537.html"
     backup: ""
