--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -74,3 +74,13 @@ usp537:
     ex: "usp537.pdf"
     temp: "temp_usp537.html"
     backup: ""
+    
+usp570:
+  - title: "USP570"
+    date: "Spring 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
