--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -23,7 +23,7 @@ stat563:
   - title: "STAT563"
     date: "Spring 2019"
     note: ""
-    hw: ""
+    hw: "hw_stat563.html"
     lab: ""
     ex: ""
     temp: ""
