--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -78,9 +78,9 @@ usp537:
 usp570:
   - title: "USP570"
     date: "Spring 2019"
-    note: ""
+    note: "rr_usp570.pdf"
     hw: ""
-    lab: ""
-    ex: ""
+    lab: "cs_usp570.html"
+    ex: "rp_usp570.pdf"
     temp: ""
     backup: ""
