--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -78,7 +78,7 @@ usp537:
 usp570:
   - title: "USP570"
     date: "Spring 2019"
-    note: "rr_usp570.pdf"
+    note: "rr_usp570.docx"
     hw: ""
     lab: "cs_usp570.html"
     ex: "rp_usp570.pdf"
