--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -53,7 +53,7 @@ stat566:
   - title: "STAT566"
     date: "Spring 2019"
     note: ""
-    hw: ""
+    hw: "hw_stat566.html"
     lab: ""
     ex: ""
     temp: ""
