--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -81,6 +81,6 @@ usp570:
     note: "rr_usp570.docx"
     hw: ""
     lab: "cs_usp570.html"
-    ex: "rp_usp570.pdf"
+    ex: "pm_usp570.pdf"
     temp: ""
     backup: ""
