--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -80,7 +80,7 @@ usp570:
     date: "Spring 2019"
     note: "rr_usp570.docx"
     hw: ""
-    lab: "cs_usp570.html"
+    lab: "cs_usp570.pdf"
     ex: "pm_usp570.pdf"
     temp: ""
     backup: ""
