--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -54,7 +54,7 @@ stat566:
     date: "Spring 2019"
     note: ""
     hw: "hw_stat566.html"
-    lab: ""
+    lab: "lab_stat566.html"
     ex: ""
     temp: ""
     backup: ""
