--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -55,7 +55,7 @@ stat566:
     note: ""
     hw: "hw_stat566.html"
     lab: "lab_stat566.html"
-    ex: ""
+    ex: "ex_stat566.html"
     temp: ""
     backup: ""
 
