--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -45,9 +45,9 @@ stat565:
     note: "note_stat565.html"
     hw: "hw_stat565.html"
     lab: ""
-    ex: "stat565.pdf"
+    ex: "fe_stat565.pdf"
     temp: "temp_stat565.html"
-    backup: ""
+    backup: "stat565.pdf"
 
 stat566:
   - title: "STAT566"
