--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -78,9 +78,9 @@ usp537:
 usp570:
   - title: "USP570"
     date: "Spring 2019"
-    note: "rr_usp570.docx"
+    note: "note_usp570.html"
     hw: ""
-    lab: "cs_usp570.pdf"
-    ex: "pm_usp570.pdf"
-    temp: ""
-    backup: ""
+    lab: ""
+    ex: ""
+    temp: "bib_usp570.bib"
+    backup: "bib_ads.bib"
