--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -22,7 +22,7 @@ stat562:
 stat563:
   - title: "STAT563"
     date: "Spring 2019"
-    note: ""
+    note: "qe_math_stat.html"
     hw: "hw_stat563.html"
     lab: ""
     ex: ""
