--- a/config.toml
+++ b/config.toml
@@ -66,19 +66,19 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   identifier = "DataCamp"
   name = "DataCamp"
   pre = "<i class=\"button-icon fa fa-2x fa-pencil\"></i>"
-  url = "https://www.datacamp.com/groups/usp654"
+  url = ""
 [[menu.footer]]
   weight = 3
   identifier = "Slack"
   name = "Slack"
   pre = "<i class=\"button-icon fa fa-2x fa-slack\"></i>"
-  url = "https://usp634-s2018.slack.com/messages"
+  url = ""
 [[menu.footer]]
   weight = 4
   identifier = "GitHub"
   name = "GitHub"
   pre = "<i class=\"button-icon fa fa-2x fa-github\"></i>"
-  url = "https://github.com/UrbanStudy/"
+  url = ""
 
 
 [params]
