--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -52,7 +52,7 @@ stat565:
 stat566:
   - title: "STAT566"
     date: "Spring 2019"
-    note: ""
+    note: "qe_applied_stat_inclass.html"
     hw: "hw_stat566.html"
     lab: "lab_stat566.html"
     ex: "ex_stat566.html"
