--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,4 +1,34 @@
 
+stat661:
+  - title: "STAT661"
+    date: "Fall 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+    
+stat671:
+  - title: "STAT671"
+    date: "Fall 2019"
+    note: ""
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+    
+stat572:
+  - title: "STAT572"
+    date: "Fall 2019"
+    note: ""
+    hw: ""
+    lab: "lab_stat572.html"
+    ex: ""
+    temp: ""
+    backup: ""
+    
 stat561:
   - title: "STAT561"
     date: "Fall 2018"
