--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -3,7 +3,7 @@ stat661:
   - title: "STAT661"
     date: "Fall 2019"
     note: ""
-    hw: ""
+    hw: "hw_stat661.html"
     lab: ""
     ex: ""
     temp: ""
