--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -12,7 +12,7 @@ stat661:
 stat671:
   - title: "STAT671"
     date: "Fall 2019"
-    note: ""
+    note: "note_stat671.html"
     hw: ""
     lab: ""
     ex: ""
