--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -23,7 +23,7 @@ stat572:
   - title: "STAT572"
     date: "Fall 2019"
     note: ""
-    hw: ""
+    hw: "hw_stat572.html"
     lab: "lab_stat572.html"
     ex: ""
     temp: ""
