--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -15,7 +15,7 @@ stat671:
     note: "note_stat671.html"
     hw: ""
     lab: ""
-    ex: "project\project_stat671.html"
+    ex: "project_stat671.html"
     temp: ""
     backup: ""
     
