--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -5,7 +5,7 @@ stat661:
     note: ""
     hw: "hw_stat661.html"
     lab: ""
-    ex: ""
+    ex: "project_stat661.html"
     temp: ""
     backup: ""
     
