--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,3 +1,22 @@
+usp657:
+  - title: "USP657"
+    date: "Fall 2020"
+    note: "note_usp657.html"
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+
+stat570:
+  - title: "STAT570"
+    date: "Winter 2020"
+    note: ""
+    hw: "pr_stat570.html"
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
 
 stat661:
   - title: "STAT661"
