--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,3 +1,14 @@
+stat501:
+  - title: "STAT501"
+    date: "Fall 2020"
+    note: "note_stat501.html"
+    hw: ""
+    lab: ""
+    ex: ""
+    temp: ""
+    backup: ""
+
+
 usp657:
   - title: "USP657"
     date: "Fall 2020"
