add nimble practise

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -4,7 +4,7 @@ stat501:
     note: "note_stat501.html"
     hw: ""
     lab: ""
-    ex: ""
+    ex: "nimble_practise.html"
     temp: ""
     backup: ""
 
