--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -2,7 +2,7 @@ stat501:
   - title: "STAT501"
     date: "Fall 2020"
     note: "note_stat501.html"
-    hw: ""
+    hw: "part2_stat501.html"
     lab: ""
     ex: "nimble_practise.html"
     temp: ""
